# budgie-kimai-timetracker

./: .gitignore  README.md  meson.build
data/: io.grnbk.kimaitimetracker.gschema.xml  kimaitimetracker.plugin  meson.build
debian/: changelog  control  debhelper-build-stamp  files  install
src/: KimaiAPI.vala  KimaiData.vala  KimaiTimerManager.vala  KimaiTimetrackerApplet.vala  KimaiTimetrackerSettings.vala  KimaiTimetrackerWindow.vala  kimai.vala  kimaiexample.vala  meson.build
